# edge-detection-project

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  EdgeRenderer.kt  MainActivity.kt  MyGLSurfaceView.kt  README.md  activity_main.xml  gradle.properties  index.html  main.ts  native-lib.cpp  settings.gradle  tsconfig.json
